Fix card and navigation spacing

--- a/resources/css/mathhulk.css
+++ b/resources/css/mathhulk.css
@@ -135,3 +135,13 @@ h1 {
 .btn-inner--icon i:not(.fa) {
 	top: 0;
 }
+
+.navbar-toggler {
+	padding: 0;
+	border: none;
+}
+
+.navbar-brand {
+	padding: 0;
+	margin: 0;
+}
